# naproche

./: .env  .gitignore  .naproche_cache.db  .naproche_cache.json  Dockerfile  README.md  README.new.md  debug_last_fail.p  debug_math.py  debug_parser.py  debug_path_method.txt  debug_simple.py  debug_tokens.py  debug_tptp.p  debug_translator.py  output.txt  pyproject.toml  repro_let.py  repro_objects.py  run_simple.py  test.p  test_min.p  verification_log.txt
.devcontainer/: devcontainer.json
.github/workflows/: check.yml
docs/: index.md
legacy/: README.old.md
math/examples/: 100_theorems.ftl.tex  perfectoidrings.ftl.tex  simple.ftl.tex
math/examples/puzzles/: checkerboard.ftl.tex
math/examples/solow/sections/: 1metrics.ftl.tex  2continuity.ftl.tex  5extrema.ftl.tex  6inverse.ftl.tex  7exponential.ftl.tex  8solow.ftl.tex
scripts/: setup.sh
src/naproche/: main.py
src/naproche/check/: cache.py  checker.py  engine.py  prover_manager.py
src/naproche/logic/: converter.py  fol.py  models.py  translator.py
src/naproche/lsp/: server.py
src/naproche/parser/: cnl_parser.py  grammar.lark  math_parser.py  preprocessor.py
src/naproche/prover/: __init__.py  base.py  driver.py  dummy.py  eprover.py  provers.py  tptp.py  vampire.py  z3.py
tests/: conftest.py  test_engine_reporter.py  test_examples.py  test_features.py  test_integration.py  test_integration_check.ftl.tex  test_lsp.py  test_naproche.py  test_preprocessor.py
tests/manual/: test_provers.ftl.tex
zed-extension/: extension.toml
